--- a/2. Exploring HTML Form Elements/index.html
+++ b/2. Exploring HTML Form Elements/index.html
@@ -8,24 +8,64 @@
 <body>
     <h1>HTML Form Example</h1>
     <!-- TODO 2.1: Add the container for the form. It should POST to "/submit_form"  -->
-    
-        <!-- TODO 2.2: Add a first name text field -->
 
-        <!-- TODO 2.3: Add a last name text field. The field must be required. -->
+    <form action="/my-handling-form-page" method="post">
+        <ul>
 
-        <!-- TODO 2.4: Add an email text field. The field must be read only. -->
+            <!-- TODO 2.2: Add a first name text field -->
+            <li>
+                <label for="name">First Name:</label>
+                <input type="text" id="name" name="user_firstname" />
+            </li>
 
-        <!-- TODO 2.5: Add an address text field. The field must be disabled. -->
+            <!-- TODO 2.3: Add a last name text field. The field must be required. -->
+            <li>
+                <label for="name">Last Name:</label>
+                <input type="text" id="name" name="user_lastname" required/>
+            </li>
 
-        <!-- TODO 2.6: Add a year level dropdown. The inital selected value must be "Select an option", but it must not be a valid selection. -->
+            <!-- TODO 2.4: Add an email text field. The field must be read only. -->
+            <li>
+                <label for="mail">Email:</label>
+                <input type="email" id="mail" name="user_email" readonly/>
+            </li>
+            <!-- TODO 2.5: Add an address text field. The field must be disabled. -->
+            <li>
+                <label for="name">Address Name:</label>
+                <input type="text" id="name" name="user_address" disabled/>
+            </li>
+            <!-- TODO 2.6: Add a year level dropdown. The inital selected value must be "Select an option", but it must not be a valid selection. -->
+            <label for="yearLevel"> Year Level:</label><br />
+            <select name="yearLevel" id = "" required>
+                <option value = "" selected disabled> Select an option</option>
+                <option value = "1"> 1st Year</option>
+                <option value = "2"> 2nd Year</option>
+                <option value = "3"> 3rd Year</option>
+                <option value = "4"> 4th Year</option>
+            </select><br/>
+            <!-- TODO 2.7: Add radio buttons that ask which learning mode the user prefers -->
+            <label for = "learningMode">Which learning mode do you prefer</label><br/>
+            <input type="radio" name="learningMode" id="online">
+            <label for="online"> Online</label>
+            <input type ="radio" name="learningMode" id ="facetoface">
+            <label for = "facetoface"> Face to Face</label><br/>
+            <!-- TODO 2.8: Add check boxes that ask which subjects the user has taken -->
+            <label for="subjectsTaken">Which subjects have you taken</label><br/>
+            <input type="checkbox" name="IT100" id="IT100">
+            <label for="online">IT100</label>
+            <input type="checkbox" name="IT101" id="IT101">
+            <label for="online">IT101</label>
+            <input type="checkbox" name ="IT104" id="IT104">
+            <label for="online">IT104</label><br/>
 
-        <!-- TODO 2.7: Add radio buttons that ask which learning mode the user prefers -->
+            <!-- TODO 2.9: Add a text area that asks the user if they would prefer to be a cactus or a shark -->
+            <label for="cactusShark">Would you rather be a cactus or a shard why?</label>
+            <textarea name= "cacutsShark" id = "cactusShark" cols="30" rows="10"></textarea>
+            <!-- TODO 2.10: Add a submit button -->
+            <input type="submit" value = "Submit">
+        </ul>
 
-        <!-- TODO 2.8: Add check boxes that ask which subjects the user has taken -->
-       
-        <!-- TODO 2.9: Add a text area that asks the user if they would prefer to be a cactus or a shark -->
-
-        <!-- TODO 2.10: Add a submit button -->
+    </form>
 
 </body>
 
