Test Commit Change

--- a/1. Essential HTML Tags/index.html
+++ b/1. Essential HTML Tags/index.html
@@ -47,7 +47,7 @@
         <img
     class="fit-picture"
     src="Padoru.jpg"
-    alt="Grapefruit slice atop a pile of other slices" />
+    alt="Sample Image" />
         <!-- TODO 1.8: Group a header and a paragraph in one tag -->
     
     <div class="warning">
