--- a/2. Exploring HTML Form Elements/index.html
+++ b/2. Exploring HTML Form Elements/index.html
@@ -59,8 +59,8 @@
             <label for="online">IT104</label><br/>
 
             <!-- TODO 2.9: Add a text area that asks the user if they would prefer to be a cactus or a shark -->
-            <label for="cactusShark">Would you rather be a cactus or a shard why?</label>
-            <textarea name= "cacutsShark" id = "cactusShark" cols="30" rows="10"></textarea>
+            <label for="cactusShark">Would you rather be a cactus or a shard why?</label><br/>
+            <textarea name= "cacutsShark" id = "cactusShark" cols="30" rows="10"></textarea><br/>
             <!-- TODO 2.10: Add a submit button -->
             <input type="submit" value = "Submit">
         </ul>
