--- a/0. Hello HTML/index.html
+++ b/0. Hello HTML/index.html
@@ -5,7 +5,7 @@
 
 <!-- TODO 0.2: Add a head with a title. Set the title to your name -->
 <head>
-    <title> Patrick Borj Tuaño</title>
+    <title> Patrick Borj N. Tuaño</title>
 </head>
 
 <!-- TODO 0.3: Add the body with the text "Hello HTML, I am <name>" -->
